--- a/js-practice.html
+++ b/js-practice.html
@@ -36,7 +36,10 @@
 
   let name = firstName + ' ' + middleName + ' ' + lastName;
   console.log(name);
-  
+
+// Strings on my own //
+let greeting = 'my name is';
+console.log(greeating + ' ' + name);
 
 
   </script>
