--- a/js-practice.html
+++ b/js-practice.html
@@ -80,15 +80,18 @@ function makeBetterName(firstName, middleName, lastName) {
   // Flow control functions on your own
   function theWinner(home, away) {
     if  (home > away) {
-    let message = "the home team won";
+    let message = "The home team won.";
     return message;
     }  else if (away > home) {
-    let message2 = "the away team won";
+    let message2 = "The away team won.";
     return message2;
+    }  else if (away === home) {
+    let message3 = "It's a tie."
+    return message3;
+    }
   }
-}
 
-  console.log(theWinner("5","3"));
+  console.log(theWinner('5','5'));
   </script>
 </body>
 </html>
